# Investment

./: .gitignore  README.md
us_stocks/: .env.us.alpaca.paper.example  .env.us.deepseek.example  .env.us.ollama_local.example  .env.us.qwen_local.example  README.md  pyproject.toml
us_stocks/artifacts/: comparison.csv  comparison_2026_multihorizon.csv  comparison_2026_sec.csv  comparison_limit3.csv  equity_curve.csv  ranking_history.csv  summary.csv  target_weights.csv
us_stocks/config/: base.yaml  soft_price.yaml  soft_price_large_cap_30.yaml  soft_price_large_cap_30_phased.yaml  soft_price_large_cap_30_phased_eligibility.yaml  soft_price_large_cap_60_dynamic_eligibility.yaml  soft_price_large_cap_60_dynamic_eligibility_execution_realistic.yaml  with_llm.yaml  with_llm_deepseek.yaml  with_llm_long.yaml  with_llm_ollama_local.yaml  with_llm_ollama_local_night.yaml  with_llm_qwen_local.yaml  with_llm_short.yaml  with_llm_swing.yaml
us_stocks/documents/: llm_inputs.sample.csv  sec_filings_recent.csv  sec_sections.csv
us_stocks/scripts/: register_us_daily_task.ps1  run_night_batch_until_10.ps1  run_overnight_quant.ps1  run_overnight_quant_prefer_cache.ps1  run_us_daily.ps1  run_us_report_stack.ps1
us_stocks/signals/: llm_document_scores.csv  llm_scores.generated.csv  llm_scores.sample.csv  sec_llm_document_scores.csv
us_stocks/tests/: test_backtest.py  test_compare_configs.py  test_config.py  test_data.py  test_dl_strategy.py  test_env_utils.py  test_experiment_manifest.py  test_features.py  test_hybrid_sequence_strategy.py  test_llm_scoring.py  test_ml_strategy.py  (+27 more)
(+366 files in other folders)
